--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>Demo project for Spring Boot and RabbitMQ</description>
 	<properties>
 		<java.version>17</java.version>
+		<jackson.version>2.14.2</jackson.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -28,9 +29,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
